--- a/index.html
+++ b/index.html
@@ -47,6 +47,31 @@
             </div>
         </div>
     </header>
+    <div class="barra">
+        <div class="contenedor clearfix">
+            <div class="logo">
+                <img src="img/logo.svg" alt="logo">
+            </div>
+            <div class="menu-movil">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <nav class="navegacion-principal clearfix">
+                <a href="">Conferencia</a>
+                <a href="">Calendario</a>
+                <a href="">Invitados</a>
+                <a href="">Reservaciones</a>
+            </nav>
+        </div>
+    </div>
+    <!-- Cierre Barra -->
+    <section class="seccion contenedor">
+        <h2>La mejor conferencia de diseño web en español</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem praesentium iste delectus? Facilis ab inventore non voluptatem. Minima quos ex id, dolor quas deleniti quam ducimus voluptates? Ullam, eaque sunt!</p>
+    </section>
+
+
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
