--- a/index.html
+++ b/index.html
@@ -63,13 +63,52 @@
                 <a href="">Invitados</a>
                 <a href="">Reservaciones</a>
             </nav>
-        </div>
+        </div><!-- Contenedor -->
     </div>
     <!-- Cierre Barra -->
+
     <section class="seccion contenedor">
         <h2>La mejor conferencia de diseño web en español</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem praesentium iste delectus? Facilis ab inventore non voluptatem. Minima quos ex id, dolor quas deleniti quam ducimus voluptates? Ullam, eaque sunt!</p>
     </section>
+
+    <section class="programa">
+        <div class="contenedor-video">
+            <video autoplay loop poster="./img/bg-talleres.jpg">
+                <source src="./video/video.mp4" type="video/mp4">
+                <source src="./video/video.webm" type="video/webm">
+                <source src="./video/video.ogv" type="video/ogg">
+            </video>
+        </div> <!-- Contenedor de video -->
+        <div class="contenido-programa">
+            <div class="contenedor">
+                <div class="programa-evento">
+                    <h2>Programa del Evento</h2>
+                    <nav class="menu-programa">
+                        <a href="#talleres"><i class="fas fa-code"> </i>Talleres</a>
+                        <a href="#conferencias"><i class="fas fa-comment"> </i>Conferencias</a>
+                        <a href="seminarios"><i class="fas fa-university"> </i>Seminarios</a>
+                    </nav>
+                    <div id="talleres" class="info-curso ocultar clearfix">
+                        <div class="detalle-evento">
+                            <h3>HTML5, CSS3 y JavaScript</h3>
+                            <p><i class="far fa-clock"> </i>16:00 hrs</p>
+                            <p><i class="far fa-calendar-alt"> </i>10 de Dic.</p>
+                            <p><i class="far fa-user"> </i>Danny Velásquez</p>
+                        </div>
+                        <div class="detalle-evento">
+                            <h3>Responsive Web Design</h3>
+                            <p><i class="far fa-clock"></i> </i>20:00 hrs</p>
+                            <p><i class="far fa-calendar-alt"> </i>10 de Dic.</p>
+                            <p><i class="far fa-user"> </i>Danny Velásquez</p>
+                        </div>
+                        <a href="http://" class="button float-right">Ver Todos</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+   
 
 
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
