--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald|PT+Sans" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@440;500&display=swap" rel="stylesheet">
     <meta name="theme-color" content="#fafafa" />
   </head>
 
@@ -103,11 +105,54 @@
                             <p><i class="far fa-user"> </i>Danny Velásquez</p>
                         </div>
                         <a href="http://" class="button float-right">Ver Todos</a>
-                    </div>
+                    </div><!--Talleres-->
+                </div><!-- Programa Evento-->
+            </div><!-- Contenedor -->
+        </div><!-- Cotenedor -->
+    </section><!-- Programa -->
+
+    <section class="invitados contenedor seccion">
+        <h2>Nuestros Invitados</h2>
+        <ul class="lista-invitados clearfix">
+            <li>
+                <div class="invitado">
+                    <img src="./img/invitado1.jpg" alt="Imagen Invitado">
+                    <p>Rafael Bautista</p>
                 </div>
-            </div>
-        </div>
+            </li>
+            <li>
+                <div class="invitado">
+                    <img src="./img/invitado2.jpg" alt="Imagen Invitado">
+                    <p>Shari Herrera</p>
+                </div>
+            </li>
+            <li>
+                <div class="invitado">
+                    <img src="./img/invitado3.jpg" alt="Imagen Invitado">
+                    <p>Gregorio Sánchez</p>
+                </div>
+            </li>
+            <li>
+                <div class="invitado">
+                    <img src="./img/invitado4.jpg" alt="Imagen Invitado">
+                    <p>Susana Rivera</p>
+                </div>
+            </li>
+            <li>
+                <div class="invitado">
+                    <img src="./img/invitado5.jpg" alt="Imagen Invitado">
+                    <p>Harold Rivera</p>
+                </div>
+            </li>
+            <li>
+                <div class="invitado">
+                    <img src="./img/invitado6.jpg" alt="Imagen Invitado">
+                    <p>Susan Sánchez</p>
+                </div>
+            </li>
+        </ul>
     </section>
+    
    
 
 
