--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <link rel="icon" href="favicon.ico">
     <link rel="manifest" href="site.webmanifest" />
     <link rel="apple-touch-icon" href="icon.png" />
     <!-- Place favicon.ico in the root directory -->
@@ -152,8 +152,17 @@
             </li>
         </ul>
     </section>
-    
-   
+    <!-- Contador -->
+    <div class="contador parallax">
+        <div class="contenedor">
+            <ul class="resumen-evento clearfix">
+                <li><p class="numero">6</p>Invitados</li>
+                <li><p class="numero">15</p>Talleres</li>
+                <li><p class="numero">3</p>Días</li>
+                <li><p class="numero">9</p>Conferencias</li>
+            </ul>
+        </div>
+    </div>
 
 
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
