--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="site.webmanifest" />
     <link rel="apple-touch-icon" href="icon.png" />
     <!-- Place favicon.ico in the root directory -->
-
+    <meta property="og:image" content="img/web-eventos.jpg">
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/all.min.css">
@@ -163,7 +163,50 @@
             </ul>
         </div>
     </div>
-
+    <!-- Precios -->
+    <section class="precios seccion">
+        <h2>Precios</h2>
+        <div class="contenedor">
+            <ul class="lista-precios clearfix">
+                <li>
+                    <div class="tabla-precio">
+                        <h3>Pase por día</h3>
+                        <p class="numero">$30</p>
+                        <ul>
+                            <li>Bocadillos Gratis</li>
+                            <li>Todas las Conferencias</li>
+                            <li>Todos los Talleres</li>
+                        </ul>
+                        <a href="#" class="button hollow">Comprar</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="tabla-precio">
+                        <h3>Todos los días</h3>
+                        <p class="numero">$50</p>
+                        <ul>
+                            <li>Bocadillos Gratis</li>
+                            <li>Todas las Conferencias</li>
+                            <li>Todos los Talleres</li>
+                        </ul>
+                        <a href="#" class="button hollow">Comprar</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="tabla-precio">
+                        <h3>Pase por 2 días</h3>
+                        <p class="numero">$45</p>
+                        <ul>
+                            <li>Bocadillos Gratis</li>
+                            <li>Todas las Conferencias</li>
+                            <li>Todos los Talleres</li>
+                        </ul>
+                        <a href="#" class="button hollow">Comprar</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
 
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
     <script
