--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <link rel="manifest" href="site.webmanifest" />
     <link rel="apple-touch-icon" href="icon.png" />
     <!-- Place favicon.ico in the root directory -->
-    <meta property="og:image" content="img/web-eventos.jpg">
+    <meta property="og:locale" content="es_ES">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Eventos KIDAN">
+    <meta property="og:image" content="./img/web-eventos.jpg">
+    <meta name="twitter:image" content="./img/web-eventos.jpg">
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/all.min.css">
