--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta property="og:locale" content="es_ES">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Eventos KIDAN">
-    <meta property="og:image" content="./img/web-eventos.jpg">
-    <meta name="twitter:image" content="./img/web-eventos.jpg">
+    <meta property="og:image" content="img/web-eventos.jpg">
+    <meta name="twitter:image" content="img/web-eventos.jpg">
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/all.min.css">
