--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                             <li>Todas las Conferencias</li>
                             <li>Todos los Talleres</li>
                         </ul>
-                        <a href="#" class="button hollow">Comprar</a>
+                        <a href="#" class="button">Comprar</a>
                     </div>
                 </li>
                 <li>
