Checks de paquetes y diferencia cual paquete es mejor

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     <meta property="og:title" content="Eventos KIDAN">
     <meta property="og:image" content="img/web-eventos.jpg">
     <meta name="twitter:image" content="img/web-eventos.jpg">
-    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/leaflet.css">
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald|PT+Sans" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@440;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@440;500&display=swap" rel="stylesheet">
     <meta name="theme-color" content="#fafafa" />
   </head>
 
