--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <link rel="manifest" href="site.webmanifest" />
     <link rel="apple-touch-icon" href="icon.png" />
     <!-- Place favicon.ico in the root directory -->
+    <meta name="description" content="Sitio web de eventos en HTML5, CSS3, JS, MySQL y PHP">
     <meta property="og:locale" content="es_ES">
+    <meta property="og:url" content="https://sinoe9891.github.io/conferencias/">
+    <meta property="og:site_name" content="Eventos KIDAN">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Eventos KIDAN">
-    <meta property="og:image" content="img/web-eventos.jpg">
-    <meta name="twitter:image" content="img/web-eventos.jpg">
+    <meta property="og:image" content="https://sinoe9891.github.io/conferencias/img/web-eventos.jpg">
+    <meta name="twitter:image" content="https://sinoe9891.github.io/conferencias/img/web-eventos.jpg">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/leaflet.css">
