--- a/index.html
+++ b/index.html
@@ -216,6 +216,44 @@
             </ul>
         </div>
     </section>
+    <!-- MAPA -->
+    <div class="mapa" id="mapa">
+
+    </div>
+    <!-- Testimoniales -->
+    <section class="seccion">
+        <h2>Testimoniales</h2>
+        <div class="testimoniales contenedor clearfix">
+            <div class="testimonial">
+                <blockquote cite="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque vel ex repellendus mollitia temporibus similique ipsam facilis eveniet voluptatum quo doloribus quas expedita quia iusto quasi, ab sit minus nemo.</p>
+                    <footer class="info-testimonial clearfix">
+                        <img src="./img/testimonial.jpg" alt="imagen testimonial">
+                        <cite>Oswaldo Aponte Escoberdo <span>Diseñador en @Kidanhn</span></cite>
+                    </footer>
+                </blockquote>
+            </div><!--Fin testimonial-->
+            <div class="testimonial">
+                <blockquote cite="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque vel ex repellendus mollitia temporibus similique ipsam facilis eveniet voluptatum quo doloribus quas expedita quia iusto quasi, ab sit minus nemo.</p>
+                    <footer class="info-testimonial clearfix">
+                        <img src="./img/testimonial.jpg" alt="imagen testimonial">
+                        <cite>Oswaldo Aponte Escoberdo <span>Diseñador en @Kidanhn</span></cite>
+                    </footer>
+                </blockquote>
+            </div><!--Fin testimonial-->
+            <div class="testimonial">
+                <blockquote cite="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque vel ex repellendus mollitia temporibus similique ipsam facilis eveniet voluptatum quo doloribus quas expedita quia iusto quasi, ab sit minus nemo.</p>
+                    <footer class="info-testimonial clearfix">
+                        <img src="./img/testimonial.jpg" alt="imagen testimonial">
+                        <cite>Oswaldo Aponte Escoberdo <span>Diseñador en @Kidanhn</span></cite>
+                    </footer>
+                </blockquote>
+            </div><!--Fin testimonial-->
+        </div>
+    </section>
+
 
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
     <script
