--- a/index.html
+++ b/index.html
@@ -253,7 +253,14 @@
             </div><!--Fin testimonial-->
         </div>
     </section>
-
+    <!-- Newsletter -->
+    <div class="newsletter parallax">
+        <div class="contenido contenedor">
+            <p>regístrate al newsletter</p>
+            <h3>Eventos KIDAN</h3>
+            <a href="#" class="button transparente">Registro</a>
+        </div>
+    </div>
 
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
     <script
