--- a/index.html
+++ b/index.html
@@ -261,8 +261,53 @@
             <a href="#" class="button transparente">Registro</a>
         </div>
     </div>
-
-
+    <!-- Cuenta regresiva -->
+    <section class="seccion">
+        <h2>Faltan</h2>
+        <div class="contenedor cuenta-regresiva">
+            <ul class="clearfix">
+                <li>
+                    <p class="numero">80</p>días
+                </li>
+                <li>
+                    <p class="numero">15</p>horas
+                </li>
+                <li>
+                    <p class="numero">5</p>minutos
+                </li>
+                <li>
+                    <p class="numero">30</p>segundos
+                </li>
+            </ul>
+        </div>
+    </section>
+    <footer class="site-footer">
+        <div class="contenedor clearfix">
+            <div class="footer-informacion">
+                <h3>Sobre <span>gdlwebcamp</span></h3>
+                <p>Praesent rutrum efficitur pharetra. Vivamus scelerisque pretium velit, id tempor turpis pulvinar et. Ut bibendum finibus massa non molestie. Curabitur urna metus, placerat gravida lacus ut, lacinia congue orci. Maecenas luctus mi at ex
+                    blandit vehicula. Morbi porttitor tempus euismod.</p>
+            </div>
+            <div class="ultimos-tweets">
+                <h3>Últimos <span>tweets</span></h3>
+                <a class="twitter-timeline" data-height="150" data-theme="light" data-link-color="#fe4918" href="https://twitter.com/creativehn">Tweets by JuanDevWP</a>
+                <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+            <div class="menu">
+                <h3>Redes <span>sociales</span></h3>
+                <nav class="redes-sociales">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-pinterest-p"></i></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </nav>
+            </div>
+        </div>
+        <p class="copyright">
+            Todos los derechos Reservados Eventos KIDAN 2020.
+        </p>
+    </footer>
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
