Registro HTML y CSS

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                 <span></span>
             </div>
             <nav class="navegacion-principal clearfix">
-                <a href="">Conferencia</a>
-                <a href="">Calendario</a>
-                <a href="">Invitados</a>
-                <a href="">Reservaciones</a>
+                <a href="#">Conferencia</a>
+                <a href="#">Calendario</a>
+                <a href="#">Invitados</a>
+                <a href="registro.html">Reservaciones</a>
             </nav>
         </div><!-- Contenedor -->
     </div>
