formulario con JS a un 80%

--- a/registro.html
+++ b/registro.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <title></title>
     <meta name="description" content="" />
@@ -26,9 +27,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@440;500&display=swap" rel="stylesheet">
     <meta name="theme-color" content="#fafafa" />
-  </head>
+</head>
 
-  <body>
+<body>
     <!--[if IE]>
       <p class="browserupgrade">
         You are using an <strong>outdated</strong> browser. Please
@@ -74,7 +75,8 @@
                 <a href="invitados.html">Invitados</a>
                 <a href="registro.html">Reservaciones</a>
             </nav>
-        </div><!-- Contenedor -->
+        </div>
+        <!-- Contenedor -->
     </div>
     <!-- Cierre Barra -->
     <section class="seccion contenedor">
@@ -110,7 +112,7 @@
                             </ul>
                             <div class="orden">
                                 <label for="pase_dia">Boletos deseados:</label>
-                                <input type="number"min="0" id="pase_dia" size="3" placeholder="0">
+                                <input type="number" min="0" id="pase_dia" size="3" placeholder="0">
                             </div>
                         </div>
                     </li>
@@ -125,7 +127,7 @@
                             </ul>
                             <div class="orden">
                                 <label for="pase_completo">Boletos deseados:</label>
-                                <input type="number"min="0" id="pase_completo" size="3" placeholder="0">
+                                <input type="number" min="0" id="pase_completo" size="3" placeholder="0">
                             </div>
                         </div>
                     </li>
@@ -140,7 +142,7 @@
                             </ul>
                             <div class="orden">
                                 <label for="pase_dosdias">Boletos deseados:</label>
-                                <input type="number"min="0" id="pase_dosdias" size="3" placeholder="0">
+                                <input type="number" min="0" id="pase_dosdias" size="3" placeholder="0">
                             </div>
                         </div>
                     </li>
@@ -148,77 +150,82 @@
                 <div id="eventos" class="eventos clearfix">
                     <h3>Elige tus talleres</h3>
                     <div class="caja">
-                          <div id="viernes" class="contenido-dia clearfix">
-                              <h4>Viernes</h4>
-                                  <div>
-                                      <p>Talleres:</p>
-                                      <label><input type="checkbox" name="registro[]" id="taller_01" value="taller_01"><time>10:00</time> Responsive Web Design</label>
-                                      <label><input type="checkbox" name="registro[]" id="taller_02" value="taller_02"><time>12:00</time> Flexbox</label>
-                                      <label><input type="checkbox" name="registro[]" id="taller_03" value="taller_03"><time>14:00</time> HTML5 y CSS3</label>
-                                      <label><input type="checkbox" name="registro[]" id="taller_04" value="taller_04"><time>17:00</time> Drupal</label>
-                                      <label><input type="checkbox" name="registro[]" id="taller_05" value="taller_05"><time>19:00</time> WordPress</label>
-                                  </div>
-                                  <div>
-                                      <p>Conferencias:</p>
-                                      <label><input type="checkbox" name="registro[]" id="conf_01" value="conf_01"><time>10:00</time> Como ser Freelancer</label>
-                                      <label><input type="checkbox" name="registro[]" id="conf_02" value="conf_02"><time>17:00</time> Tecnologías del Futuro</label>
-                                      <label><input type="checkbox" name="registro[]" id="conf_03" value="conf_03"><time>19:00</time> Seguridad en la Web</label>
-                                  </div>
-                                  <div>
-                                      <p>Seminarios:</p>
-                                      <label><input type="checkbox" name="registro[]" id="sem_01" value="sem_01"><time>10:00</time> Diseño UI y UX para móviles</label>
-                                  </div>
-                          </div> <!-- viernes-->
-                          <div id="sabado" class="contenido-dia clearfix">
-                              <h4>Sábado</h4>
-                              <div>
-                                    <p>Talleres:</p>
-                                    <label><input type="checkbox" name="registro[]" id="taller_06" value="taller_06"><time>10:00</time> AngularJS</label>
-                                    <label><input type="checkbox" name="registro[]" id="taller_07" value="taller_07"><time>12:00</time> PHP y MySQL</label>
-                                    <label><input type="checkbox" name="registro[]" id="taller_08" value="taller_08"><time>14:00</time> JavaScript Avanzado</label>
-                                    <label><input type="checkbox" name="registro[]" id="taller_09" value="taller_09"><time>17:00</time> SEO en Google</label>
-                                    <label><input type="checkbox" name="registro[]" id="taller_10" value="taller_10"><time>19:00</time> De Photoshop a HTML5 y CSS3</label>
-                                    <label><input type="checkbox" name="registro[]" id="taller_11" value="taller_11"><time>21:00</time> PHP Medio y Avanzado</label>
-                              </div>
-                              <div>
-                                    <p>Conferencias:</p>
-                                    <label><input type="checkbox" name="registro[]" id="conf_04" value="conf_04"><time>10:00</time> Como crear una tienda online que venda millones en pocos días</label>
-                                    <label><input type="checkbox" name="registro[]" id="conf_05" value="conf_05"><time>17:00</time> Los mejores lugares para encontrar trabajo</label>
-                                    <label><input type="checkbox" name="registro[]" id="conf_06" value="conf_06"><time>19:00</time> Pasos para crear un negocio rentable</label>
-                              </div>
-                              <div>
-                                    <p>Seminarios:</p>
-                                    <label><input type="checkbox" name="registro[]" id="sem_02" value="sem_02"><time>10:00</time> Aprende a Programar en una mañana</label>
-                                    <label><input type="checkbox" name="registro[]" id="sem_03" value="sem_03"><time>17:00</time> Diseño UI y UX para móviles</label>
-                              </div>
-                          </div> <!-- sabado-->
-                          <div id="domingo" class="contenido-dia clearfix">
-                              <h4>Domingo</h4>
-                              <div>
-                                    <p>Talleres:</p>
-                                    <label><input type="checkbox" name="registro[]" id="taller_12" value="taller_12"><time>10:00</time> Laravel</label>
-                                    <label><input type="checkbox" name="registro[]" id="taller_13" value="taller_13"><time>12:00</time> Crea tu propia API</label>
-                                    <label><input type="checkbox" name="registro[]" id="taller_14" value="taller_14"><time>14:00</time> JavaScript y jQuery</label>
-                                    <label><input type="checkbox" name="registro[]" id="taller_15" value="taller_15"><time>17:00</time> Creando Plantillas para WordPress</label>
-                                    <label><input type="checkbox" name="registro[]" id="taller_16" value="taller_16"><time>19:00</time> Tiendas Virtuales en Magento</label>
-                              </div>
-                              <div>
-                                    <p>Conferencias:</p>
-                                    <label><input type="checkbox" name="registro[]" id="conf_07" value="conf_07"><time>10:00</time> Como hacer Marketing en línea</label>
-                                    <label><input type="checkbox" name="registro[]" id="conf_08" value="conf_08"><time>17:00</time> ¿Con que lenguaje debo empezar?</label>
-                                    <label><input type="checkbox" name="registro[]" id="conf_09" value="conf_09"><time>19:00</time> Frameworks y librerias Open Source</label>
-                              </div>
-                              <div>
-                                    <p>Seminarios:</p>
-                                    <label><input type="checkbox" name="registro[]" id="sem_04" value="sem_04"><time>14:00</time> Creando una App en Android en una tarde</label>
-                                    <label><input type="checkbox" name="registro[]" id="sem_05" value="sem_05"><time>17:00</time> Creando una App en iOS en una tarde</label>
-                              </div>
-                          </div> <!-- domingo-->
-                      </div><!--.caja-->
-                </div> <!--eventos-->
+                        <div id="viernes" class="contenido-dia clearfix">
+                            <h4>Viernes</h4>
+                            <div>
+                                <p>Talleres:</p>
+                                <label><input type="checkbox" name="registro[]" id="taller_01" value="taller_01"><time>10:00</time> Responsive Web Design</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_02" value="taller_02"><time>12:00</time> Flexbox</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_03" value="taller_03"><time>14:00</time> HTML5 y CSS3</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_04" value="taller_04"><time>17:00</time> Drupal</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_05" value="taller_05"><time>19:00</time> WordPress</label>
+                            </div>
+                            <div>
+                                <p>Conferencias:</p>
+                                <label><input type="checkbox" name="registro[]" id="conf_01" value="conf_01"><time>10:00</time> Como ser Freelancer</label>
+                                <label><input type="checkbox" name="registro[]" id="conf_02" value="conf_02"><time>17:00</time> Tecnologías del Futuro</label>
+                                <label><input type="checkbox" name="registro[]" id="conf_03" value="conf_03"><time>19:00</time> Seguridad en la Web</label>
+                            </div>
+                            <div>
+                                <p>Seminarios:</p>
+                                <label><input type="checkbox" name="registro[]" id="sem_01" value="sem_01"><time>10:00</time> Diseño UI y UX para móviles</label>
+                            </div>
+                        </div>
+                        <!-- viernes-->
+                        <div id="sabado" class="contenido-dia clearfix">
+                            <h4>Sábado</h4>
+                            <div>
+                                <p>Talleres:</p>
+                                <label><input type="checkbox" name="registro[]" id="taller_06" value="taller_06"><time>10:00</time> AngularJS</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_07" value="taller_07"><time>12:00</time> PHP y MySQL</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_08" value="taller_08"><time>14:00</time> JavaScript Avanzado</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_09" value="taller_09"><time>17:00</time> SEO en Google</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_10" value="taller_10"><time>19:00</time> De Photoshop a HTML5 y CSS3</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_11" value="taller_11"><time>21:00</time> PHP Medio y Avanzado</label>
+                            </div>
+                            <div>
+                                <p>Conferencias:</p>
+                                <label><input type="checkbox" name="registro[]" id="conf_04" value="conf_04"><time>10:00</time> Como crear una tienda online que venda millones en pocos días</label>
+                                <label><input type="checkbox" name="registro[]" id="conf_05" value="conf_05"><time>17:00</time> Los mejores lugares para encontrar trabajo</label>
+                                <label><input type="checkbox" name="registro[]" id="conf_06" value="conf_06"><time>19:00</time> Pasos para crear un negocio rentable</label>
+                            </div>
+                            <div>
+                                <p>Seminarios:</p>
+                                <label><input type="checkbox" name="registro[]" id="sem_02" value="sem_02"><time>10:00</time> Aprende a Programar en una mañana</label>
+                                <label><input type="checkbox" name="registro[]" id="sem_03" value="sem_03"><time>17:00</time> Diseño UI y UX para móviles</label>
+                            </div>
+                        </div>
+                        <!-- sabado-->
+                        <div id="domingo" class="contenido-dia clearfix">
+                            <h4>Domingo</h4>
+                            <div>
+                                <p>Talleres:</p>
+                                <label><input type="checkbox" name="registro[]" id="taller_12" value="taller_12"><time>10:00</time> Laravel</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_13" value="taller_13"><time>12:00</time> Crea tu propia API</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_14" value="taller_14"><time>14:00</time> JavaScript y jQuery</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_15" value="taller_15"><time>17:00</time> Creando Plantillas para WordPress</label>
+                                <label><input type="checkbox" name="registro[]" id="taller_16" value="taller_16"><time>19:00</time> Tiendas Virtuales en Magento</label>
+                            </div>
+                            <div>
+                                <p>Conferencias:</p>
+                                <label><input type="checkbox" name="registro[]" id="conf_07" value="conf_07"><time>10:00</time> Como hacer Marketing en línea</label>
+                                <label><input type="checkbox" name="registro[]" id="conf_08" value="conf_08"><time>17:00</time> ¿Con que lenguaje debo empezar?</label>
+                                <label><input type="checkbox" name="registro[]" id="conf_09" value="conf_09"><time>19:00</time> Frameworks y librerias Open Source</label>
+                            </div>
+                            <div>
+                                <p>Seminarios:</p>
+                                <label><input type="checkbox" name="registro[]" id="sem_04" value="sem_04"><time>14:00</time> Creando una App en Android en una tarde</label>
+                                <label><input type="checkbox" name="registro[]" id="sem_05" value="sem_05"><time>17:00</time> Creando una App en iOS en una tarde</label>
+                            </div>
+                        </div>
+                        <!-- domingo-->
+                    </div>
+                    <!--.caja-->
+                </div>
+                <!--eventos-->
 
 
-                
+
                 <div id="resumen" class="resumen clearfix">
                     <h3>Pago y Extras</h3>
                     <div class="caja clearfix">
@@ -240,16 +247,19 @@
                                     <option value="PUL">Pulsera</option>
                                     <option value="PLU">Plumas</option>
                                 </select>
+                                <div id="error_regalo"></div>
                             </div>
 
-                            <input type="button" value="Calcular" class="button">
+                            <input type="button" id="calcular" value="calcular" class="button">
                         </div>
-                        
+
                         <!-- Total -->
                         <div class="total">
                             <p>Resumen:</p>
-                            <div id="lista-productos">
+                            <div id="lista">
+                                <ul id="lista-productos">
 
+                                </ul>
                             </div>
                             <p>Total:</p>
                             <div id="sumatotal">
@@ -292,31 +302,28 @@
         </p>
     </footer>
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script>
-      window.jQuery ||
-        document.write(
-          '<script src="js/vendor/jquery-3.4.1.min.js"><\/script>'
-        );
+        window.jQuery ||
+            document.write(
+                '<script src="js/vendor/jquery-3.4.1.min.js"><\/script>'
+            );
     </script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
-      window.ga = function () {
-        ga.q.push(arguments);
-      };
-      ga.q = [];
-      ga.l = +new Date();
-      ga("create", "UA-XXXXX-Y", "auto");
-      ga("set", "transport", "beacon");
-      ga("send", "pageview");
+        window.ga = function() {
+            ga.q.push(arguments);
+        };
+        ga.q = [];
+        ga.l = +new Date();
+        ga("create", "UA-XXXXX-Y", "auto");
+        ga("set", "transport", "beacon");
+        ga("send", "pageview");
     </script>
     <script src="https://www.google-analytics.com/analytics.js" async></script>
-  </body>
+</body>
+
 </html>
