--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <title></title>
     <meta name="description" content="" />
@@ -26,9 +27,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@440;500&display=swap" rel="stylesheet">
     <meta name="theme-color" content="#fafafa" />
-  </head>
+</head>
 
-  <body>
+<body>
     <!--[if IE]>
       <p class="browserupgrade">
         You are using an <strong>outdated</strong> browser. Please
@@ -61,7 +62,7 @@
     <div class="barra">
         <div class="contenedor clearfix">
             <div class="logo">
-                <img src="img/logo.svg" alt="logo">
+                <a href="/index.html"><img src="img/logo.svg" alt="logo"></a>
             </div>
             <div class="menu-movil">
                 <span></span>
@@ -74,7 +75,8 @@
                 <a href="#">Invitados</a>
                 <a href="registro.html">Reservaciones</a>
             </nav>
-        </div><!-- Contenedor -->
+        </div>
+        <!-- Contenedor -->
     </div>
     <!-- Cierre Barra -->
 
@@ -90,7 +92,8 @@
                 <source src="./video/video.webm" type="video/webm">
                 <source src="./video/video.ogv" type="video/ogg">
             </video>
-        </div> <!-- Contenedor de video -->
+        </div>
+        <!-- Contenedor de video -->
         <div class="contenido-programa">
             <div class="contenedor">
                 <div class="programa-evento">
@@ -114,11 +117,16 @@
                             <p><i class="far fa-user"> </i>Danny Velásquez</p>
                         </div>
                         <a href="http://" class="button float-right">Ver Todos</a>
-                    </div><!--Talleres-->
-                </div><!-- Programa Evento-->
-            </div><!-- Contenedor -->
-        </div><!-- Cotenedor -->
-    </section><!-- Programa -->
+                    </div>
+                    <!--Talleres-->
+                </div>
+                <!-- Programa Evento-->
+            </div>
+            <!-- Contenedor -->
+        </div>
+        <!-- Cotenedor -->
+    </section>
+    <!-- Programa -->
 
     <section class="invitados contenedor seccion">
         <h2>Nuestros Invitados</h2>
@@ -165,10 +173,14 @@
     <div class="contador parallax">
         <div class="contenedor">
             <ul class="resumen-evento clearfix">
-                <li><p class="numero">6</p>Invitados</li>
-                <li><p class="numero">15</p>Talleres</li>
-                <li><p class="numero">3</p>Días</li>
-                <li><p class="numero">9</p>Conferencias</li>
+                <li>
+                    <p class="numero">6</p>Invitados</li>
+                <li>
+                    <p class="numero">15</p>Talleres</li>
+                <li>
+                    <p class="numero">3</p>Días</li>
+                <li>
+                    <p class="numero">9</p>Conferencias</li>
             </ul>
         </div>
     </div>
@@ -232,7 +244,8 @@
                         <cite>Oswaldo Aponte Escoberdo <span>Diseñador en @Kidanhn</span></cite>
                     </footer>
                 </blockquote>
-            </div><!--Fin testimonial-->
+            </div>
+            <!--Fin testimonial-->
             <div class="testimonial">
                 <blockquote cite="">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque vel ex repellendus mollitia temporibus similique ipsam facilis eveniet voluptatum quo doloribus quas expedita quia iusto quasi, ab sit minus nemo.</p>
@@ -241,7 +254,8 @@
                         <cite>Oswaldo Aponte Escoberdo <span>Diseñador en @Kidanhn</span></cite>
                     </footer>
                 </blockquote>
-            </div><!--Fin testimonial-->
+            </div>
+            <!--Fin testimonial-->
             <div class="testimonial">
                 <blockquote cite="">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque vel ex repellendus mollitia temporibus similique ipsam facilis eveniet voluptatum quo doloribus quas expedita quia iusto quasi, ab sit minus nemo.</p>
@@ -250,7 +264,8 @@
                         <cite>Oswaldo Aponte Escoberdo <span>Diseñador en @Kidanhn</span></cite>
                     </footer>
                 </blockquote>
-            </div><!--Fin testimonial-->
+            </div>
+            <!--Fin testimonial-->
         </div>
     </section>
     <!-- Newsletter -->
@@ -309,31 +324,28 @@
         </p>
     </footer>
     <script src="js/vendor/modernizr-3.8.0.min.js"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script>
-      window.jQuery ||
-        document.write(
-          '<script src="js/vendor/jquery-3.4.1.min.js"><\/script>'
-        );
+        window.jQuery ||
+            document.write(
+                '<script src="js/vendor/jquery-3.4.1.min.js"><\/script>'
+            );
     </script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
-      window.ga = function () {
-        ga.q.push(arguments);
-      };
-      ga.q = [];
-      ga.l = +new Date();
-      ga("create", "UA-XXXXX-Y", "auto");
-      ga("set", "transport", "beacon");
-      ga("send", "pageview");
+        window.ga = function() {
+            ga.q.push(arguments);
+        };
+        ga.q = [];
+        ga.l = +new Date();
+        ga("create", "UA-XXXXX-Y", "auto");
+        ga("set", "transport", "beacon");
+        ga("send", "pageview");
     </script>
     <script src="https://www.google-analytics.com/analytics.js" async></script>
-  </body>
+</body>
+
 </html>
