--- a/registro.html
+++ b/registro.html
@@ -62,7 +62,7 @@
     <div class="barra">
         <div class="contenedor clearfix">
             <div class="logo">
-                <img src="img/logo.svg" alt="logo">
+                <a href="./"><img src="img/logo.svg" alt="logo"></a>
             </div>
             <div class="menu-movil">
                 <span></span>
